--- a/artifacts/channel/configtx.yaml
+++ b/artifacts/channel/configtx.yaml
@@ -40,55 +40,55 @@ Organizations:
             - Host: peer0.org1.example.com
               Port: 7051
 
-    - &Org2
-        Name: Org2MSP
+    # - &Org2
+    #     Name: Org2MSP
 
-        ID: Org2MSP
+    #     ID: Org2MSP
 
-        MSPDir: ../../setup1/vm2/crypto-config/peerOrganizations/org2.example.com/msp
+    #     MSPDir: ../../setup1/vm2/crypto-config/peerOrganizations/org2.example.com/msp
 
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('Org2MSP.admin', 'Org2MSP.peer', 'Org2MSP.client')"
-            Writers:
-                Type: Signature
-                Rule: "OR('Org2MSP.admin', 'Org2MSP.client')"
-            Admins:
-                Type: Signature
-                Rule: "OR('Org2MSP.admin')"
-            Endorsement:
-                Type: Signature
-                Rule: "OR('Org2MSP.peer')"
+    #     Policies:
+    #         Readers:
+    #             Type: Signature
+    #             Rule: "OR('Org2MSP.admin', 'Org2MSP.peer', 'Org2MSP.client')"
+    #         Writers:
+    #             Type: Signature
+    #             Rule: "OR('Org2MSP.admin', 'Org2MSP.client')"
+    #         Admins:
+    #             Type: Signature
+    #             Rule: "OR('Org2MSP.admin')"
+    #         Endorsement:
+    #             Type: Signature
+    #             Rule: "OR('Org2MSP.peer')"
 
-        AnchorPeers:
-            - Host: peer0.org2.example.com
-              Port: 9051
+    #     AnchorPeers:
+    #         - Host: peer0.org2.example.com
+    #           Port: 9051
 
-    - &Org3
-        Name: Org3MSP
+    # - &Org3
+    #     Name: Org3MSP
 
-        ID: Org3MSP
+    #     ID: Org3MSP
 
-        MSPDir: ../../setup1/vm3/crypto-config/peerOrganizations/org3.example.com/msp
+    #     MSPDir: ../../setup1/vm3/crypto-config/peerOrganizations/org3.example.com/msp
 
-        Policies:
-            Readers:
-                Type: Signature
-                Rule: "OR('Org3MSP.admin', 'Org3MSP.peer', 'Org3MSP.client')"
-            Writers:
-                Type: Signature
-                Rule: "OR('Org3MSP.admin', 'Org3MSP.client')"
-            Admins:
-                Type: Signature
-                Rule: "OR('Org3MSP.admin')"
-            Endorsement:
-                Type: Signature
-                Rule: "OR('Org3MSP.peer')"
+    #     Policies:
+    #         Readers:
+    #             Type: Signature
+    #             Rule: "OR('Org3MSP.admin', 'Org3MSP.peer', 'Org3MSP.client')"
+    #         Writers:
+    #             Type: Signature
+    #             Rule: "OR('Org3MSP.admin', 'Org3MSP.client')"
+    #         Admins:
+    #             Type: Signature
+    #             Rule: "OR('Org3MSP.admin')"
+    #         Endorsement:
+    #             Type: Signature
+    #             Rule: "OR('Org3MSP.peer')"
 
-        AnchorPeers:
-            - Host: peer0.org3.example.com
-              Port: 11051
+    #     AnchorPeers:
+    #         - Host: peer0.org3.example.com
+    #           Port: 11051
 
 Capabilities:
     Channel: &ChannelCapabilities
@@ -182,8 +182,8 @@ Profiles:
             <<: *ApplicationDefaults
             Organizations:
                 - *Org1
-                - *Org2
-                - *Org3
+                # - *Org2
+                # - *Org3
             Capabilities:
                 <<: *ApplicationCapabilities
 
@@ -221,5 +221,5 @@ Profiles:
             SampleConsortium:
                 Organizations:
                 - *Org1
-                - *Org2
-                - *Org3
+                # - *Org2
+                # - *Org3
