--- a/artifacts/channel/crypto-config.yaml
+++ b/artifacts/channel/crypto-config.yaml
@@ -10,7 +10,7 @@ OrdererOrgs:
             - "localhost"
             - "127.0.0.1"
       - Hostname: orderer2
-        SANS:
+        SANS: 
           - "localhost"
           - "127.0.0.1"
       - Hostname: orderer3
@@ -31,19 +31,19 @@ PeerOrgs:
     Users:
       Count: 1
 
-  - Name: Org2
-    Domain: org2.example.com
-    EnableNodeOUs: true
+  # - Name: Org2
+  #   Domain: org2.example.com
+  #   EnableNodeOUs: true
 
-    Template:
-      Count: 2
-      SANS:
-        - "localhost"
+  #   Template:
+  #     Count: 2
+  #     SANS:
+  #       - "localhost"
 
-    Users:
-      Count: 1
+  #   Users:
+  #     Count: 1
 
-  - Name: Org3
+  # - Name: Org3
     Domain: org3.example.com
     EnableNodeOUs: true
 
